[gd_scene load_steps=36 format=3 uid="uid://eoloj1c3dknk"]

[ext_resource type="Script" path="res://scripts/towerscripts/testai.gd" id="1_1ba84"]
[ext_resource type="Texture2D" uid="uid://cpj1mghuddc10" path="res://sprites/character_assets/enemy/baddie3.png" id="2_kpph1"]
[ext_resource type="Texture2D" uid="uid://27fhnfw7duox" path="res://sprites/character_assets/enemy/chillguy.png" id="3_5a0j4"]
[ext_resource type="Script" path="res://scripts/enemyclipthrough.gd" id="3_qer27"]
[ext_resource type="Texture2D" uid="uid://bak7euq8kbl5x" path="res://sprites/character_assets/enemy/demon.png" id="4_7fj0i"]
[ext_resource type="Script" path="res://scripts/towerscripts/testaidamage.gd" id="4_ygwp1"]
[ext_resource type="Texture2D" uid="uid://d437lbntyycy" path="res://sprites/character_assets/enemy/frostedsmall.png" id="5_6mg2g"]
[ext_resource type="Script" path="res://scripts/towerscripts/testairecievedamage.gd" id="5_l6npc"]
[ext_resource type="Script" path="res://scripts/towerscripts/Detect.gd" id="6_70ukf"]
[ext_resource type="Texture2D" uid="uid://bw0xocbcd6lvu" path="res://sprites/ui/bars/enemyhealthunder.png" id="6_i3dg3"]
[ext_resource type="Texture2D" uid="uid://b8dvubms17oyx" path="res://sprites/character_assets/enemy/baddie2.png" id="6_osu2g"]
[ext_resource type="Script" path="res://scripts/towerscripts/Undetect.gd" id="7_8jqgt"]
[ext_resource type="Texture2D" uid="uid://tvcgujxru3qc" path="res://sprites/ui/bars/enemyhealthover.png" id="7_jrqre"]
[ext_resource type="Texture2D" uid="uid://b7ueh5fc2e6wj" path="res://sprites/character_assets/enemy/baddie4.png" id="7_pjdjf"]
[ext_resource type="Texture2D" uid="uid://3cop2flwink1" path="res://sprites/character_assets/enemy/baddie.png" id="8_ow7tw"]
[ext_resource type="Texture2D" uid="uid://b4m32wp04eesd" path="res://sprites/ui/bars/enemyhealthprogress.png" id="8_s7850"]
[ext_resource type="Script" path="res://scripts/towerscripts/testaihealth.gd" id="9_df6ad"]
[ext_resource type="AudioStream" uid="uid://ddu58ru5gtodg" path="res://audio/finaksfx/enemyhurtpowerful.mp3" id="12_uqfo2"]
[ext_resource type="Script" path="res://scripts/towerscripts/enemyseerange.gd" id="12_wmxfr"]
[ext_resource type="Texture2D" uid="uid://21a5tlkw3laa" path="res://sprites/character_assets/enemy/hurtparticle.png" id="13_g4n24"]
[ext_resource type="Script" path="res://scripts/towerscripts/enemyforgetrange.gd" id="13_yk4od"]
[ext_resource type="Script" path="res://scripts/towerscripts/EnemyRegenTimer.gd" id="15_h1ufx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_endfc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kpph1")
}],
"loop": true,
"name": &"Blue",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5a0j4")
}],
"loop": true,
"name": &"Chill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7fj0i")
}],
"loop": true,
"name": &"Demon",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_6mg2g")
}],
"loop": true,
"name": &"Frosted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_osu2g")
}],
"loop": true,
"name": &"Green",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_pjdjf")
}],
"loop": true,
"name": &"Red",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ow7tw")
}],
"loop": true,
"name": &"Yellow",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_34rfk"]
radius = 58.2151

[sub_resource type="CircleShape2D" id="CircleShape2D_duvtc"]
radius = 92.0054

[sub_resource type="CircleShape2D" id="CircleShape2D_frt7r"]
radius = 50.0

[sub_resource type="Curve" id="Curve_ofgwx"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 90.1099), 0.0, -174.927, 0, 0, Vector2(1, 116.484), 144.231, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7sq4b"]
curve = SubResource("Curve_ofgwx")

[sub_resource type="Curve" id="Curve_340yy"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -200), 0.0, -335.075, 0, 0, Vector2(0.266667, -147.253), 0.0, 0.0, 0, 0, Vector2(0.5, -41.7582), 0.0, 0.0, 0, 0, Vector2(0.806667, 6.59341), 0.0, 0.0, 0, 0, Vector2(1, 41.7582), -824.176, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_hjt1q"]
curve = SubResource("Curve_340yy")

[sub_resource type="Curve" id="Curve_0smpx"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.89011), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7f2mh"]
curve = SubResource("Curve_0smpx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t3avo"]
lifetime_randomness = 0.47
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
inherit_velocity_ratio = 1.137
direction = Vector3(0, 0, 0)
spread = 180.0
linear_accel_curve = SubResource("CurveTexture_7sq4b")
radial_accel_min = -100.0
radial_accel_max = 100.0
radial_accel_curve = SubResource("CurveTexture_hjt1q")
tangential_accel_min = -100.0
tangential_accel_max = 100.0
attractor_interaction_enabled = false
scale_over_velocity_min = 1.0
scale_over_velocity_max = 2.0
scale_over_velocity_curve = SubResource("CurveTexture_7f2mh")
turbulence_influence_max = 0.521

[sub_resource type="CircleShape2D" id="CircleShape2D_vq212"]
radius = 450.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p7exb"]
radius = 1500.0

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
editor_description = "enemy.
ID 0 = yellow
ID 1 = green
ID 2 = blue
ID 3 = red
ID 4 = demon
ID 5 = chill tutorial guy
ID 6 = frosted"
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_1ba84")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Char" type="AnimatedSprite2D" parent="."]
position = Vector2(6, 4)
sprite_frames = SubResource("SpriteFrames_endfc")
animation = &"Yellow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
shape = SubResource("CircleShape2D_34rfk")
debug_color = Color(0.6, 0.545098, 0, 0.419608)
script = ExtResource("3_qer27")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_use_custom = true
debug_path_custom_color = Color(0.65098, 0, 0, 1)
debug_path_custom_line_width = 4.0

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("4_ygwp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_duvtc")
debug_color = Color(0.619608, 0, 0.141176, 0.419608)
script = ExtResource("3_qer27")

[node name="DamageCooldown" type="Timer" parent="Area2D"]
wait_time = 1.5

[node name="ShakeTimer" type="Timer" parent="Area2D"]
wait_time = 0.15
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("5_l6npc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_frt7r")
debug_color = Color(1, 0.411765, 0.380392, 0.419608)

[node name="DamageCooldown" type="Timer" parent="Hurtbox"]
autostart = true

[node name="SoundWait" type="Timer" parent="Hurtbox"]
wait_time = 0.15
one_shot = true

[node name="Owie" type="AudioStreamPlayer2D" parent="Hurtbox"]
stream = ExtResource("12_uqfo2")
attenuation = 0.277392
max_polyphony = 20
bus = &"SFX"

[node name="HurtParticle" type="GPUParticles2D" parent="Hurtbox"]
z_index = 90
scale = Vector2(2, 2)
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_t3avo")
texture = ExtResource("13_g4n24")
lifetime = 0.15
speed_scale = 0.35
explosiveness = 0.49
randomness = 0.67
fixed_fps = 15
interpolate = false

[node name="Detect" type="Area2D" parent="."]
z_index = -910
script = ExtResource("6_70ukf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource("CircleShape2D_vq212")
debug_color = Color(0.14902, 0.517647, 1, 0.419608)
script = ExtResource("12_wmxfr")

[node name="Undetect" type="Area2D" parent="."]
z_index = -910
script = ExtResource("7_8jqgt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Undetect"]
shape = SubResource("CircleShape2D_p7exb")
script = ExtResource("13_yk4od")

[node name="Health" type="TextureProgressBar" parent="."]
offset_left = -126.0
offset_top = -102.0
offset_right = 126.0
offset_bottom = -78.0
max_value = 50.0
step = 2.0
value = 50.0
texture_under = ExtResource("6_i3dg3")
texture_over = ExtResource("7_jrqre")
texture_progress = ExtResource("8_s7850")
script = ExtResource("9_df6ad")

[node name="EnemyRegenTimer" type="Timer" parent="."]
script = ExtResource("15_h1ufx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="Area2D" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="Area2D" method="_on_body_shape_exited"]
[connection signal="timeout" from="Area2D/DamageCooldown" to="Area2D" method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="Area2D/ShakeTimer" to="Area2D" method="_on_shake_timer_timeout"]
[connection signal="body_shape_entered" from="Hurtbox" to="Hurtbox" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Hurtbox" to="Hurtbox" method="_on_body_shape_exited"]
[connection signal="timeout" from="Hurtbox/DamageCooldown" to="Hurtbox" method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="Hurtbox/SoundWait" to="Hurtbox" method="_on_sound_wait_timeout"]
[connection signal="body_shape_entered" from="Detect" to="Detect" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Undetect" to="Undetect" method="_on_body_shape_exited"]
[connection signal="timeout" from="EnemyRegenTimer" to="EnemyRegenTimer" method="_on_timeout"]
